--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,14 @@ dependencies:
   chewie: ^1.3.4
   file_picker: ^3.0.4
   intl: ^0.17.0
-  flutter_ion: ^1.0.0
-  webrtc: ^0.0.1
+  firebase_messaging_web: ^3.1.0
+  jitsi_meet:
+    git:
+      url: https://github.com/dispersik/jitsi_meet_fork
+      ref: master
+  webviewx: ^0.2.1
+  
+  
 
 dev_dependencies:
   flutter_test:
