--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,13 @@ dependencies:
   video_player_web: ^2.0.10
   video_player: ^2.4.5
   chewie: ^1.3.4
-  file_picker: ^3.0.4
+  file_picker: ^4.6.0 
   intl: ^0.17.0
   firebase_messaging_web: ^3.1.0
   webviewx: ^0.2.1
+  html_editor_enhanced: ^2.5.0
+  flutter_tex: ^4.0.3+1
+  math_keyboard: ^0.1.7
   
   
 
