added more free video and DPB

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.11
   open_file: ^3.2.1
   universal_html: ^2.0.8
+  image_picker: ^0.8.5+3
   
   
 
@@ -42,9 +43,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  # assets:
-  #   - assets/images/
+  assets:
+    - assets/
+    - assets/fonts/
+    - assets/images/
+    # - assets/images/user.jpg
+    # - assets/images/img.png
+    # - assets/images/profile.png
+    # - assets/video/
 
   # fonts:
   #   - family: Schyler
